ACME/main/default/objects/Project__c/fields/Account_Associated__c.field-meta.xml
<CustomField>
    <fullName>Account_Associated__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It is lookup to account.</description>
    <label>Account Associated</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>