ACME/main/default/objects/Project__c/fields/Number_of_Resources_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Resources_Allocated__c</fullName>
    <description>To know number of employees allocated</description>
    <label>Number of Resources Allocated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>