ACME/main/default/objects/Project__c/fields/Number_of_Resources_Required__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Resources_Required__c</fullName>
    <description>To know number of employees required</description>
    <label>Number of Resources Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>