ACME/main/default/objects/Project__c/fields/Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_ID__c</fullName>
    <description>To know the project id.</description>
    <displayFormat>{0}</displayFormat>
    <label>Project ID</label>
    <type>AutoNumber</type>
</CustomField>