ACME/main/default/objects/Project__c/fields/Shared_With_Partner_User__c.field-meta.xml
<CustomField>
    <fullName>Shared_With_Partner_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Partner user.</description>
    <label>Shared With Partner User</label>
    <type>Checkbox</type>
</CustomField>