ACME/main/default/objects/Project__c/fields/Skill_required__c.field-meta.xml
<CustomField>
    <fullName>Skill_required__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Skill required</description>
    <label>Skill required</label>
    <referenceTo>Skill__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>